<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:background="@drawable/stars_background"
        android:weightSum="10"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <GridLayout
            android:id="@+id/mainGrid"
            android:columnCount="2"
            android:rowCount="6"
            android:alignmentMode="alignMargins"
            android:columnOrderPreserved="false"
            android:layout_weight="8"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="14dp">

            <!-- Row 1 -->

            <!-- Column 1 -->
            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                app:cardElevation="8dp"
                app:cardCornerRadius="8dp"
                app:cardBackgroundColor="@color/blue_cv"
                >

                <LinearLayout
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_margin="16dp"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RadioGroup
                        android:id="@+id/locationRG"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="32dp"
                        android:orientation="vertical"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/textView2">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/location"
                            android:textColor="@color/blue_4"/>

                        <TextView
                            android:layout_width="110dp"
                            android:layout_height="30dp"/>

                        <RadioButton
                            android:id="@+id/radio_button_GPS"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginEnd="8dp"
                            android:textColor="@color/blue_5"
                            android:text="@string/gps" />

                        <RadioButton
                            android:id="@+id/radio_button_Maps"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textColor="@color/blue_5"
                            android:text="@string/map" />
                    </RadioGroup>



                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <!-- Column 2 -->
            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                app:cardElevation="8dp"
                app:cardCornerRadius="8dp"
                app:cardBackgroundColor="@color/blue_cv"
                >

                <LinearLayout
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_margin="16dp"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RadioGroup
                        android:id="@+id/langRG"
                        android:layout_width="110dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="32dp"
                        android:orientation="vertical"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/textView2">


                        <TextView
                            android:layout_width="110dp"
                            android:layout_height="wrap_content"
                            android:text="@string/lang"
                            android:textColor="@color/blue_4"/>

                        <TextView
                            android:layout_width="110dp"
                            android:layout_height="30dp"/>

                        <RadioButton
                            android:id="@+id/radio_button_English"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginEnd="8dp"
                            android:textColor="@color/blue_5"
                            android:text="@string/english" />

                        <RadioButton
                            android:id="@+id/radio_button_Arabic"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textColor="@color/blue_5"
                            android:text="@string/arabic" />
                    </RadioGroup>

                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <!-- Row 2 -->

            <!-- Column 1 -->
            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                app:cardElevation="8dp"
                app:cardCornerRadius="8dp"
                app:cardBackgroundColor="@color/blue_cv"
                >

                <LinearLayout
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_margin="16dp"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RadioGroup
                        android:id="@+id/tempRG"
                        android:layout_width="110dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="32dp"
                        android:orientation="vertical"
                        app:layout_constraintEnd_toEndOf="parent">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/temp"
                            android:textColor="@color/blue_4" />

                        <TextView
                            android:layout_width="110dp"
                            android:layout_height="30dp"/>

                        <RadioButton
                            android:id="@+id/radio_button_Celsius"
                            android:layout_width="match_parent"
                            android:layout_height="33dp"
                            android:text="@string/celsius"
                            android:textColor="@color/blue_5" />

                        <RadioButton
                            android:id="@+id/radio_button_Kelvin"
                            android:layout_width="match_parent"
                            android:layout_height="33dp"
                            android:text="@string/kelvin"
                            android:textColor="@color/blue_5" />

                        <RadioButton
                            android:id="@+id/radio_button_Fahrenheit"
                            android:layout_width="match_parent"
                            android:layout_height="33dp"
                            android:text="@string/fahrenheit"
                            android:textColor="@color/blue_5" />
                    </RadioGroup>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <!-- Column 2 -->


            <!-- Row 2 -->

            <!-- Column 1 -->
            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                app:cardElevation="8dp"
                app:cardCornerRadius="8dp"
                app:cardBackgroundColor="@color/blue_cv"
            >

                <LinearLayout
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_margin="16dp"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RadioGroup
                        android:id="@+id/notificationRG"
                        android:layout_width="110dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="32dp"
                        android:orientation="vertical"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/textView2">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/notification"
                            android:textColor="@color/blue_4"/>

                        <TextView
                            android:layout_width="110dp"
                            android:layout_height="30dp"/>

                        <RadioButton
                            android:id="@+id/radio_button_enable"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginEnd="8dp"
                            android:textColor="@color/blue_5"
                            android:text="@string/enable" />

                        <RadioButton
                            android:id="@+id/radio_button_disable"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textColor="@color/blue_5"
                            android:text="@string/disable" />
                    </RadioGroup>
                </LinearLayout>

            </androidx.cardview.widget.CardView>



        </GridLayout>

    </LinearLayout>

</ScrollView>